# exchange-rate-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.builder  Makefile  README.md  build.rs  docker-compose.yml  local.docker-compose.yml  rate.json
.github/workflows/: builder.yml  dep-change.yml  docker-image.yml
src/: bot.rs  database.rs  environment.rs  exchange_rate.rs  exchange_rate_api.rs  llm.rs  main.rs  plots.rs  utils.rs
src/commands/: about.rs  check_rate.rs  mod.rs
src/database/: exchange_rate.rs  exchange_rate_api_raw.rs  historical_data.rs  llm_result.rs  mod.rs  search_result.rs
src/llm/: generate.rs  mod.rs  prompt.rs
src/utils/: message.rs  mod.rs  parse.rs  plots.rs  search.rs
test/: dummy_exchange_server.py
