[package]
name = "exchange-rate-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
reqwest = {version ="0.12.9"}
rusqlite ={ version = "0.29", features = ["bundled"] }
rand = "0.8.4"
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.11.1"
