[package]
name = "exchange-rate-bot"
version = "0.1.0"
edition = "2021"

# Define the binary target
[[bin]]
name = "exchange-rate-bot"
path = "src/main.rs"  # Ensure this path matches your main Rust file

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
reqwest = {version ="0.12.9"}
rusqlite ={ version = "0.29", features = ["bundled"] }
rand = "0.8.4"
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.11.1"
serde = "1.0.215"
plotters = "0.3.7"
image = "0.25.5"
thiserror = "2.0.3"
[build-dependencies]
chrono = "0.4"