[package]
name = "exchange-rate-bot"
version = "0.1.0"
edition = "2021"

# Define the binary target
[[bin]]
name = "exchange-rate-bot"
path = "src/main.rs"  # Ensure this path matches your main Rust file

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"

tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

rusqlite ={ version = "0.32", features = ["bundled"] }
rand = "0.8.4"
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.11.1"
serde = "1.0.215"
plotters = "0.3.7"
image = "0.25.5"
thiserror = "2.0.3"
percent-encoding = "2.3.1"
cron = "0.15.0"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "chrono",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "cache",
    "simd_json"
]
version = "0.12"

[build-dependencies]
chrono = "0.4"
